fixed a small colour scheme error that made bottom text hard to read

--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -30,7 +30,7 @@ position: absolute;
 vertical-align: middle;
 }
 body {
-background: black;
+background: white;
 color: black;
  height: 100%;
   margin: 0;
